<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <LinearLayout 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
        android:orientation="horizontal">

	    <Gallery
	        android:id="@+id/gallery1"
	        android:layout_width="fill_parent"
	        android:layout_height="100dip" />
	
	    <ImageButton
	        android:id="@+id/addImageButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center|right"
	        android:contentDescription="@string/add_image"
	        android:src="@drawable/plus" />
	    
    </LinearLayout>

    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_gravity="top" >
        
    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:adjustViewBounds="true"
        android:cropToPadding="true"
        android:scaleType="fitStart"
        android:src="@drawable/background" />
        
    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:paddingTop="4dp">
        
        <View android:id="@+id/strut"
	        android:layout_width="0dp"
	        android:layout_height="0dp" 
	        android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/strut"
            android:layout_alignParentLeft="true"
            android:background="#555555"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/description"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/strut"
            android:layout_alignParentRight="true"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/directions"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </RelativeLayout>

        
    <LinearLayout
	        android:id="@+id/linearLayout4"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content" >
	
	        <TextView
	            android:id="@+id/description"
	            android:layout_width="fill_parent"
	            android:layout_height="100dip"
	            android:padding="5dp"
	            android:textColor="#33b5e5" />
		
		    <TextView
		        android:id="@+id/directions"
		        android:layout_width="fill_parent"
		        android:layout_height="100dip"
		        android:background="#555555"
		        android:padding="5dp"
		        android:textColor="#ffbb33"
		        android:visibility="gone" />
	
	    </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
    	
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="25dp"
            android:layout_gravity="top"
            android:adjustViewBounds="true"
            android:cropToPadding="true"
            android:scaleType="fitStart"
            android:src="@drawable/background" />

        <View android:id="@+id/strut1"
	        android:layout_width="0dp"
	        android:layout_height="0dp" 
	        android:layout_centerHorizontal="true"/>

        <Button
            android:id="@+id/trailsButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/strut1"
            android:layout_alignParentLeft="true"
            android:text="@string/trails" />

        <Button
            android:id="@+id/challengesButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/strut1"
            android:layout_alignParentRight="true"
            android:text="@string/challenges" />

    </RelativeLayout>

     <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_gravity="top" >
        
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:adjustViewBounds="true"
            android:cropToPadding="true"
            android:scaleType="fitStart"
            android:src="@drawable/background" />
        
        <LinearLayout
	        android:id="@+id/linearLayout5"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:padding="7dp" >
	
	        <TextView
	            android:id="@+id/textView7"
	            android:layout_width="fill_parent"
	            android:layout_height="fill_parent"
	            android:text="@string/comments" />
	
	    </LinearLayout>
	        
	    <ScrollView
	        android:id="@+id/scrollView1"
	        android:layout_width="fill_parent"
	        android:layout_height="0dip"
	        android:layout_weight="1" 
	        android:background="#FFFFFF">
	
	        <LinearLayout
	            android:id="@+id/linearLayout2"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content" >
	
	            <TextView
	                android:id="@+id/comments"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:padding="10dp"
	                android:textColor="#000000" />
	
	        </LinearLayout>
	    </ScrollView>
	    </RelativeLayout>

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tags"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:padding="5dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#99CC00" />
            
		    <ImageButton
		        android:id="@+id/addTagButton"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center|right"
		        android:contentDescription="@string/add_image"
		        android:src="@drawable/plus" />

        </LinearLayout>
            
    </HorizontalScrollView>

</LinearLayout>